--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">灰姑娘会员</string>
+
+    <string name="behavior_sample_title">com.cinderellavip.weight.behavior.SampleTitleBehavior</string>
 </resources>
